# 3DReconstruction

./: README.md
examples/task1/: CMakeLists.txt  task1-1_test_math_basic.cc  task1-2_test_camera.cc  task1-3_test_fundamental_8_point.cc  task1-4_test_fundamental_ransac.cc  task1-5_test_pose_from_fundamental.cc  task1-6_test_matching.cc
examples/task2/: task2-1_test_triangle.cc  task2-2_test_p3p_kneip.cc  task2-2_test_p3p_ransac.cc  task2-3_test_lm_optimize.cc  task2-4_test_jacobian.cc  task2-5_test_bundle_adjustment.cc  test_ba.txt
examples/task3/: defines.h  functions.cc  functions.h  task3-1_test_incremental_sfm.cc
features/: matching.h
sfm/: ransac_pose_p3p.cc
texturing/: CMakeLists.txt
